docs/ja/2.7/_sources/manuals/oase/oase.rst.txt
====
OASE
====

はじめに
=========

| 本書では、OASE機能および操作方法について説明します。

OASE 概要
=========

| 本章では、OASEのイベントについて説明します。

イベント処理イメージ
--------------------

| OASEでは、まず監視システムが検知したシステムの状態変化をイベントとして収集し、評価を行います。
| 評価では、フィルターでイベントを絞り込み、ルールで条件に一致するかを判定し、一致した場合に次のアクションを決定、実行します。
| イベント処理の全体像をわかりやすく示すため、本節では実際に発生するイベントを想定した例を用いて、イベントの発生からアクション実行までの流れを説明します。

イベント例
^^^^^^^^^^^

| Webサーバー停止時の自動再起動

.. figure:: /images/ja/oase/oase/oase_eventflow_example.png
   :alt: Webサーバー停止時の自動再起動処理フロー


.. list-table:: 用語説明
   :widths: 2 8
   :header-rows: 1
   :align: left

   * - 用語名
     - 内容
   * - 監視システム
     - | システムの状態変化を収集するために利用されるソフトウェアやサービスの総称です。
       | システムの状態変化を検知し、Exastro OASEにイベントを作成・送信します。
       | 
   * - OASE
     - | Exastro OASEは、システムの監視・運用自動化を支援するソフトウェアです。
       | 監視システムで作成されたイベントを収集し、定義された条件に基づいて適切なアクションを実行します。
       | 
   * - イベント
     - | 監視システムが検知した監視対象の状態変化を、Exastroに通知するための情報のことです。
       | 
   * - ラベル
     - | 取得したイベントに対して付与するタグや分類情報のことです。
       | イベントを整理・分類し、後続のフィルターやルール判定で使いやすくするために使用します。
       | ラベルによって、異なるシステムからのイベントを均質化した情報として扱うことが可能です。
       | 
   * - フィルター
     - | ラベル付与されたイベントの中から特定の条件に合致するイベントだけを抽出する仕組みです。
       | ルール判定の前段階で、どのイベントをルール判定の対象にするかを絞り込む役割を果たします。
       | 
   * - ルール
     - | フィルターで絞り込まれたイベントに対して、どのような条件でどのアクションを実行するかを定義するものです。
       | 本定義は、フィルターとアクションを紐づける役割を持ちます。
       | 
   * - 評価
     - | 収集したイベントがフィルターによって抽出され、ルールの条件に一致するかどうかを判定し、
       | 一致した場合に次の動作（アクション、結論イベント）を決定するまでの一連のプロセスのことです。
       | 
   * - アクション
     - | 定義されたルールにマッチした場合に、イベントに対して実行する具体的な対応処理です。
       | 
   * - 結論イベント
     - | ルールにマッチしたイベントの結果として生成される新しいイベントです。
       | 元のイベントから情報を引き継ぎ、処理結果や判定結果を含むことができます。
       | 結論イベント自体を別のルールで評価することができるため、連鎖的な自動化が可能です。
       | 

OASE 利用手順
=============

| 各OASE メニューの利用手順について説明します

OASE作業フロー
-----------------------

| OASE の各メニューにおける標準的な作業フローは以下の通りです。
| 各作業の詳細は次項に記載しています。

.. figure:: /images/ja/oase/oase/oase_rure_process.png
   :width: 700px
   :alt: OASE作業フロー

-  **作業フロー詳細と参照先**

   #. | **ラベルの登録**
      | メニューグループ「ラベル」のラベル作成、ラベル付与の画面から、イベントで使用するラベルを定義し、イベントに対してラベルを付与する設定を登録します。
      | 詳細は :ref:`label_creation` 、:ref:`labeling` を参照してください。

   #. | **フィルターの登録**
      | メニューグループ「ルール」のフィルターの画面から、ルールに使用するラベルの条件を設定するフィルターを登録します。
      | 詳細は :ref:`filter` を参照してください。

   #. | **アクションの登録**
      | メニューグループ「ルール」のアクションの画面から、ルール判定にて条件を満たした際に実行するアクションを登録します。
      | 詳細は :ref:`action` を参照してください。

   #. | **ルールの登録**
      | メニューグループ「ルール」のルールの画面から、ルール判定の条件や使用するアクションなどを設定するアクションを登録します。
      | 詳細は :ref:`rule` を参照してください。

OASE メニュー構成
=================

| 本章では、OASEのメニュー構成について説明します。

メニュー/画面一覧
-----------------

#. | **OASEのメニュー**
   | OASEのメニュー一覧を以下に記述します。

   .. table::  OASE メニュー/画面一覧
      :widths: 1 1 1 1 5
      :align: left

      +-------+--------------+--------------+--------------+-----------------------------------------+
      | **N\  | **親メニュー\| **メニュー\  | **メニュー\  | **説明**                                |
      | o**   | グループ**   | グループ**   | ・画面**     |                                         |
      +=======+==============+==============+==============+=========================================+
      | 1     | OASE         | イベント     | イベント\    | OASEに関する各種設定をメンテナンス\     |
      |       |              |              | フロー       | （閲覧/登録/更新/廃止）できます。       |
      +-------+              +              +--------------+-----------------------------------------+
      | 2     |              |              | イベント\    | エージェントによって取得された\         |
      |       |              |              | 履歴         | イベントの一覧を閲覧できます。          |
      +-------+              +--------------+--------------+-----------------------------------------+
      | 3     |              | ラベル       | ラベル作成   | ラベルをメンテナンス\                   |
      |       |              |              |              | （閲覧/登録/更新/廃止）できます。       |
      +-------+              +              +--------------+-----------------------------------------+
      | 4     |              |              | ラベル付与   | ラベルを付与するために、イベント\       |
      |       |              |              |              | 収集対象とラベル付与条件と該当ラベルを\ |
      |       |              |              |              | 紐付（閲覧/登録/更新/廃止）できます。   |
      +-------+              +              +--------------+-----------------------------------------+
      | 5     |              |              | 重複排除     | イベントの重複排除する設定を\           |
      |       |              |              |              | メンテナンス（閲覧/登録/更新/廃止）\    |
      |       |              |              |              | できます。                              |
      +-------+              +--------------+--------------+-----------------------------------------+
      | 6     |              | ルール       | フィルター   | フィルターをメンテナンス\               |
      |       |              |              |              | （閲覧/登録/更新/廃止）できます。       |
      |       |              |              |              |                                         |
      +-------+              +              +--------------+-----------------------------------------+
      | 7     |              |              | アクション   | OASEのルール判定にて条件を満たした際に\ |
      |       |              |              |              | 実行するオペレーションとConductorの\    |
      |       |              |              |              | 組み合わせをメンテナンス\               |
      |       |              |              |              | （閲覧/登録/更新/廃止）できます。       |
      +-------+              +              +--------------+-----------------------------------------+
      | 8     |              |              | ルール       | ルールをメンテナンス\                   |
      |       |              |              |              | （閲覧/登録/更新/廃止）できます。       |
      +-------+              +              +--------------+-----------------------------------------+
      | 9     |              |              | 評価結果     | アクション履歴を閲覧できます。\         |
      |       |              |              |              | 「詳細」を押下すると\                   |
      |       |              |              |              | Conductor作業確認メニューに遷移します。 |
      +-------+--------------+--------------+--------------+-----------------------------------------+

OASE メニュー操作説明
============================

| 本章では、OASE機能のメニュー操作説明について説明します。

OASE メニュー
-------------------

| 本節では、OASEをインストールした状態で表示されるメニューの操作について記載します。

.. _event_flow:

イベントフロー
--------------

イベントについて
^^^^^^^^^^^^^^^^^
| イベントは、監視システムが監視対象システムから収集した状態変化や発生事象を表すデータです。
| 監視対象システムで状態変化（サービス停止、CPU高負荷など）が発生すると、監視システムがそれを検知してイベントを作成します。
| 監視システム（Zabbix、Prometheus、Datadogなど）が作成したイベントを、ExastroのOASEが取得して評価自動対応を行います。
| 
| イベントは複数のラベル（キーと値のペア）形式で情報を保持します。
| 例えば、「process:  httpd」「status:  down」「timestamp: 2025-12-25T10:00:00Z」のようなラベルでイベントの内容を表現します。
| これは、:menuselection:`OASE --> ラベル付与` 画面で定義された内容に基づいて設定されます。
| また、イベントには、システムラベル（_exastro_で始まる予約ラベル）が自動的に付与されます。
| システムラベルには、イベントの取得日時、イベントの有効期限（TTL）などが含まれます。
| システムラベルの詳細は、:ref:`label_creation_systemlabel` を参照してください。
| 
| イベントには「通常イベント」と「結論イベント」の2種類があり、_exastro_typeラベルで区別されます。
| 通常イベントは監視システムが監視対象システムから収集した状態変化を表すデータを、イベントとしてOASEが取得したものです。
| 結論イベントはルールマッチ後にOASEが生成する対応結果を含むイベントです。
| イベントはラベル付与、フィルター、ルール評価の順に処理され、ルールマッチ時にアクションが実行されます。
|
| 結論イベントも通常イベントと同様に評価フローの対象となるため、連鎖的な自動対応や多段階の処理が可能です。

イベントフロー画面
^^^^^^^^^^^^^^^^^^^

| :menuselection:`OASE --> イベントフロー` 画面では、特定のイベントの評価処理の流れを可視化する画面です。
| イベントの取得からイベントの状態変化、ルール評価、アクション実行、結論イベント生成の各段階での処理状況と結果を時系列で確認できます。
| また、この画面からフィルター、アクション、ルールの設定を直接メンテナンスすることも可能です。

.. figure:: /images/ja/oase/oase/event_flow_menu.png
   :width: 800px
   :alt: イベントフロー画面

   イベントフロー画面

.. figure:: /images/ja/oase/oase/event_flow_screen_v2-4.png
   :width: 800px
   :alt: 使用イメージ（イベントフロー）

   使用イメージ（イベントフロー）

.. note::
   | :menuselection:`フィルター`・:menuselection:`アクション`・:menuselection:`ルール` の :menuselection:`有効` の値がFalseの場合は、各名称が薄く表示されます。

イベントRAWデータについて
^^^^^^^^^^^^^^^^^^^^^^^^^
| 収集したイベントの元データを確認できます。

.. figure:: /images/ja/oase/oase/event_flow_event_raw_data.png
   :width: 800px
   :alt: イベントRAWデータ（イベントフロー）

   イベントRAWデータ（イベントフロー）

表示パターン選択について
^^^^^^^^^^^^^^^^^^^^^^^^^

| :guilabel:`表示パターン選択` を押下することで、表示するイベントを選択することができます。（複数選択可能）

.. figure:: /images/ja/oase/oase/event_flow_display_pattern_v2-4.png
   :width: 200px
   :alt: 表示パターン選択（イベントフロー）

   表示パターン選択（イベントフロー）

.. raw:: html

   <style type="text/css">
      #eventflowDisplayTable table td {
         vertical-align: top;
      }
   </style> 

   <div id="eventflowDisplayTable">

.. list-table:: イベントフロー画面 表示パターン選択
   :widths: 20 100 10
   :header-rows: 1

   * - 項目
     - 説明
     - アイコン
   * - 新規イベント
     - | 収集して未だ評価機能に検知されていない状態のことです。
       | 判定時間が過ぎると、既知（判定済み）、未知、時間切れのいずれかに変化します。
     - .. image:: /images/ja/oase/oase/eventflow_icon_new.png
           :width: 50px
           :alt: 新規イベント アイコン
   * - 既知イベント
     - | 評価機能に検知された状態もしくは対象のことです。
     -  .. image:: /images/ja/oase/oase/eventflow_icon_known.png
          :width: 50px
          :alt: 既知イベント アイコン
   * - 未知イベント
     - | フィルターに抽出されなかった（評価機能に検知されなかった）状態もしくは対象のことです。※
       | 未知の事象であることから、今後の評価対象として検討する必要が考えられます。
     -  .. image:: /images/ja/oase/oase/eventflow_icon_unknown.png
          :width: 50px
          :alt: 未知イベント アイコン
   * - 時間切れイベント
     - | 下記のいずれかの理由により、ルールの評価対象から外した対象のことです。
       | ・TTLの2倍以上の期間が経過して、評価対象とするには古すぎる
       | ・TTLを経過した直後の評価タイミング（ルールにマッチさせる最終タイミング）までに、マッチさせることが出来なかった
     -  .. image:: /images/ja/oase/oase/eventflow_icon_timeout.png
          :width: 50px
          :alt: 時間切れイベント アイコン
   * - 結論イベント
     - ルールにマッチした際に、発生するイベントのことです。
     - .. image:: /images/ja/oase/oase/eventflow_icon_conclusion.png
          :width: 50px
          :alt: 結論イベント アイコン
   * - 実行アクション
     - ルールにマッチしたことにより実行したアクションの情報を表示します。
     - .. image:: /images/ja/oase/oase/eventflow_icon_action.png
          :width: 50px
          :alt: 実行アクション アイコン
   * - ルール
     - ルールID、ルール名を表示します。
     - .. image:: /images/ja/oase/oase/eventflow_icon_rule.png
          :width: 50px
          :alt: ルール アイコン

.. raw:: html

   </div>

| ※  :menuselection:`OASE管理 --> イベント収集` での下記設定が間違っている場合は、未知イベントとして取り込まれます。
| （"_exastro_not_available" をキーとしたラベルが付与されます。）
| イベントRAWデータと見比べて型を確認し、 :menuselection:`OASE管理 --> イベント収集` での設定を見直してください。
| レスポンスキーとイベントIDキー に関しては、 :ref:`こちら<oase_agent_respons_key_enevnt_id_key>` を参照してください。

.. list-table:: 設定間違い（_exastro_not_available）の見方
 :widths: 3 2 5
 :header-rows: 1
 :align: left

 * - 付与されるラベルの値
   - 修正する設定箇所
   - 説明
 * - RESPONSE_KEY not found
   - レスポンスキー
   - イベントに存在しないキーを指定した場合にラベルが付与されます。
 * - | RESPONSE_LIST_FLAG is incorrect.(Not Dict Type)
     | RESPONSE_LIST_FLAG is incorrect.(Not List Type)
   - レスポンスリストフラグ
   - | 実際の値がリストであるのに対して設定でFalseを選択した場合にラベルが付与されます。
     | 実際の値がリストではないのに対して設定でTrueを選択した場合にラベルが付与されます。
 * - EVENT_ID_KEY not found
   - イベントIDキー
   - イベントの「レスポンスキー」に該当するデータに、存在しないキーを指定した場合にラベルが付与されます。


日時・範囲指定について
^^^^^^^^^^^^^^^^^^^^^^

| :guilabel:`範囲指定` を押下することで、表示する日時の範囲を指定することができます。

.. figure:: /images/ja/oase/oase/event_flow_time.png
   :width: 800px
   :alt: 範囲指定（イベントフロー）

   範囲指定（イベントフロー）

| :guilabel:`〇時間` を押すことで、表示する時間を指定することができます。
| デフォルトは1時間、指定できる範囲は最小5分間、最大5年間です。

.. figure:: /images/ja/oase/oase/event_flow_time_select.png
   :width: 100px
   :alt: 時間指定（イベントフロー）

   時間指定（イベントフロー）

動作について
^^^^^^^^^^^^^

| :menuselection:`フィルター`・:menuselection:`アクション`・:menuselection:`ルール` について、各画面でも、イベントフロー内でもメンテナンス（閲覧/登録/更新/廃止）できます。ドラッグ&ドロップも使用できます。

.. figure:: /images/ja/oase/oase/event_flow_drag_drop_v2-4.gif
   :width: 800px
   :alt: ドラッグ&ドロップで入力（イベントフロー）

   ドラッグ&ドロップで入力（イベントフロー）

フィルター
**********

.. figure:: /images/ja/oase/oase/event_flow_filter_v2-4.png
   :width: 800px
   :alt: フィルター入力画面（イベントフロー）

   フィルター入力画面（イベントフロー）

| :menuselection:`フィルター` の入力項目については、:ref:`filter` を参照してください。

アクション
**********

.. figure:: /images/ja/oase/oase/event_flow_action_v2-4.png
   :width: 800px
   :alt: アクション入力画面（イベントフロー）

   アクション入力画面（イベントフロー）

| :menuselection:`アクション` の入力項目については、:ref:`action` を参照してください。

ルール
*******

.. figure:: /images/ja/oase/oase/event_flow_rule_v2-4.png
   :width: 800px
   :alt: ルール入力画面（イベントフロー）

   ルール入力画面（イベントフロー）

| :menuselection:`ルール` の入力項目については、:ref:`rule` を参照してください。

.. _event_history:

イベント履歴
------------

1. | :menuselection:`OASE --> イベント履歴` 画面は、収集されたイベントを一覧で表示し、検索・フィルタリングできる画面です。
   | 各イベントのラベル内容、評価状態（評価済み/未評価）、有効期限(TTL)などを確認できます。
   | イベントの削除や再評価などの操作も可能で、複数のイベントをまとめて管理できます。

.. figure:: /images/ja/oase/oase/event_history_menu.png
   :width: 800px
   :alt: イベント履歴画面

   イベント履歴画面

2. | イベント履歴画面の項目は以下の通りです。

.. list-table:: イベント履歴画面 項目一覧
   :widths: 50 100
   :header-rows: 1
   :align: left

   * - 項目
     - 説明
   * - オブジェクトID
     - 自動採番のため編集不可。
   * - イベント収集設定ID
     - [元データ]OASE管理/イベント収集/イベント収集設定ID
   * - イベント収集日時
     - エージェントがイベントを取得した日時。
   * - イベント有効日時
     - イベントの有効日時。
   * - イベント状態
     - | 以下の状態が存在します。
       | ・検討中
       | ・未知
       | ・判定済み
       | ・時間切れ
   * - イベント種別
     - | 以下の状態が存在します。
       | ・イベント
       | ・結論イベント
   * - ラベル
     - 付与されたラベル情報。
   * - 評価ルール名
     - | [元データ]
       | OASE/ルール/ルールラベル名
   * - 利用イベント
     - 評価に利用されたイベント。

| 検索方法に関しては、 :ref:`event_history_search_method` を参照してください。

.. _label_creation:

ラベル作成
-----------

ラベルについて
^^^^^^^^^^^^^^

| ラベルは、イベントに付与される属性情報で、キーと値のペアで構成されます。
| ラベルには、Exastroが自動付与する「システムラベル」と、ユーザーが設定する「ユーザーラベル」の2種類があります。
| システムラベルには、イベント種別（_exastro_type）や評価済みフラグ（_exastro_evaluated）などがあり、イベントの状態管理に使用されます。

.. _label_creation_systemlabel:

..  list-table:: システムラベル一覧
   :widths: 40 60
   :header-rows: 1

   * - ラベルキー
     - 説明
   * - _exastro_event_collection_settings_id
     - どのイベント収集設定で収集されたかを示すID
   * - _exastro_fetched_time
     - イベントが取得された日時
   * - _exastro_end_time
     - イベントの有効期限日時（TTL）
   * - _exastro_agent_name
     - イベントを収集したエージェントの名前
   * - _exastro_agent_version
     - イベントを収集したエージェントのバージョン
   * - _exastro_type
     - イベントの種別（通常イベント/結論イベント）
   * - _exastro_checked
     - 新規イベント通知が行われたかどうかのフラグ（0：未、1：済）
   * - _exastro_evaluated
     - イベントがルール評価済みかどうかのフラグ（0：未、1：済）
   * - _exastro_undetected
     - イベントが未知かどうかのフラグ（0：通常、1：未知）
   * - _exastro_timeout
     - イベントが時間切れかどうかのフラグ（0：有効、1：時間切れ）

| :menuselection:`OASE --> ラベル作成` 画面では、ユーザーラベルのキーを定義することができます。
| :menuselection:`OASE --> ラベル付与` 画面では、受信したイベントの特定フィールドの値を条件に、ラベルに固定値や特定フィールドの値を設定できます。
| 
| 付与されたラベルは、フィルター条件での絞り込みやルール評価の判定に使用されます。

ラベル作成画面
^^^^^^^^^^^^^^

1. | :menuselection:`OASE --> ラベル作成` 画面は、イベントで使用するラベルの定義（ラベルキー、データ型、説明など）を作成・管理する画面です。
   | ここで定義したラベルは、イベント収集時やラベル付与時に使用できるようになり、フィルターやルールの条件設定でも参照できます。

.. figure:: /images/ja/oase/oase/label_creation_menu.png
   :width: 800px
   :alt: ラベル作成画面

   ラベル作成画面

2. | ラベル作成画面の入力項目は以下の通りです。

.. list-table:: ラベル作成画面 入力項目一覧
   :widths: 50 100 30 30 30
   :header-rows: 1
   :align: left

   * - 項目
     - 説明
     - 入力必須
     - 入力方法
     - 制約事項
   * - ラベルキー
     - | ラベルキーを半角英数字と利用可能な記号(_-)で入力できます。
       | 先頭に記号を使うことはできません。
     - 〇
     - 手動入力
     - 最大長255バイト
   * - カラーコード
     - | 設定するとイベントフロー画面で色がつきます。
       | 設定しないとデフォルトで色がつきます。
     - ー
     - 手動入力
     - 最大長40バイト
   * - 備考
     - 自由記述欄。レコードの廃止・復活時にも記載可能。
     - ー
     - 手動入力
     - 最大長4000バイト

.. _labeling:

ラベル付与
-----------

1. | :menuselection:`OASE --> ラベル付与` 画面は、収集されたイベントに対して自動的にラベルを追加・更新する設定を作成する画面です。
   | 例えば、「イベントの「状態」が"0"と一致する場合、ラベルの「status」に"down"を付与」といった条件に基づいてラベルを動的に付与できます。
   | ラベル作成画面が「どんなラベルが存在するか」を定義するのに対し、ラベル付与画面は「イベントに対してどのラベルをどう付与するか」を設定します。

.. figure:: /images/ja/oase/oase/labeling_menu.png
   :width: 800px
   :alt: ラベル付与画面

   ラベル付与画面

2. | ラベル付与画面の入力項目は以下の通りです。

   .. table:: ラベル付与画面 入力項目一覧
      :widths: 1 1 7 1 1 2
      :align: left

      +-----------------------------------+---------------------------------------------------------+--------------+--------------+-----------------+
      | **項目**                          | **説明**                                                | **入力必須** | **入力方法** | **制約事項**    |
      +===================================+=========================================================+==============+==============+=================+
      | ラベリング設定名                  | 任意のラベリング設定名を入力します。                    | 〇           | 自動入力     | 最大長255バイト |
      +-----------------------------------+---------------------------------------------------------+--------------+--------------+-----------------+
      | イベント収集設定名                | イベント収集で登録したイベント収集設定名が表示されます。| 〇           | リスト選択   | ー              |
      +-----------------+-----------------+---------------------------------------------------------+--------------+--------------+-----------------+
      |                 | キー            | 検索条件となる、イベントのプロパティのキーをJSONの\     | ー           | 手動入力     | 最大長255バイト |
      |                 |                 | クエリ言語（JMESPath）で指定します。                    |              |              | ※1              |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 半角英数字と記号(!#%&()*+,-.;<=>?@[]^_{|}~)\            |              |              |                 |
      |                 |                 | を使用できます。                                        |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 下記キーも入力可能です。                                |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・_exastro_event_collection_settings_id                 |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・_exastro_fetched_time                                 |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・_exastro_end_time                                     |              |              |                 |
      |                 +-----------------+---------------------------------------------------------+--------------+--------------+-----------------+
      |                 | 値のデータ型    | 値のデータ型を選択します。                              | ー           | リスト選択   | ※1, ※2          |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・真偽値、オブジェクト、配列、空判定：                  |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 比較方法が[==,≠]の場合に、いずれかを指定してください。  |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・その他：                                              |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 比較方法が[RegExp, RegExp(DOTALL), RegExp(MULTILINE)]\  |              |              |                 |
      |                 |                 | の場合は指定してください。                              |              |              |                 |
      |                 +-----------------+---------------------------------------------------------+--------------+--------------+-----------------+
      |                 | 比較方法        | 比較方法を選択します。                                  | ー           | リスト選択   | ※1              |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・<, <=, >, >=：                                        |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 値のデータ型が、[文字列、整数、小数]の場合のみ選択\     |              |              |                 |
      |                 |                 | 可能です。                                              |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・RegExp, RegExp(DOTALL), RegExp(MULTILINE)※3：         |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 値のデータ型が、[その他]の場合のみ選択可能です。        |              |              |                 |
      |                 +-----------------+---------------------------------------------------------+--------------+--------------+-----------------+
      |                 | 比較する値      | 比較する値を入力します。                                | ー           | 手動入力     | 最大長4000バイト|
      |                 |                 |                                                         |              |              | ※1              |
      |                 |                 | ・値のデータ型で[真偽値]を選択した場合：                |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | trueかfalse（大文字が含まれていても可能）を入力します。 |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・値のデータ型で[オブジェクト]を選択した場合：          |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | {}で囲みます。                                          |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・値のデータ型で[配列]を選択した場合：                  |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | []で囲みます。                                          |              |              |                 |
      +-----------------+-----------------+---------------------------------------------------------+--------------+--------------+-----------------+
      | ラベル          | キー            | 下記キーとラベル作成で登録したラベルキーが\             | 〇           | リスト選択   | ※1              |
      |                 |                 | 選択できます。                                          |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・_exastro_host                                         |              |              |                 |
      |                 +-----------------+---------------------------------------------------------+--------------+--------------+-----------------+
      |                 | 値              | ラベル付与したい値を入力します。                        | ー           | 手動入力     | 最大長255バイト |
      |                 |                 |                                                         |              |              | ※1              |
      |                 |                 | 正規表現で使用したい場合は、以下のように入力して\       |              |              |                 |
      |                 |                 | ください。                                              |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ①正規表現を使って（「比較する値」による）検索を行い、\  |              |              |                 |
      |                 |                 | 任意の値をラベルにつけたい                              |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 任意の値を入力してください。                            |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ②正規表現を使って（「比較する値」による）検索を行い、\  |              |              |                 |
      |                 |                 | そのマッチした結果を、ラベルの値としてそのまま\         |              |              |                 |
      |                 |                 | 利用したい場合                                          |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 値を空欄にしてください。                                |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ③②のマッチした結果に対して、正規表現置換を行いたい\     |              |              |                 |
      |                 |                 | 場合                                                    |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 検索結果のキャプチャグループの値を使いたい場合などを\   |              |              |                 |
      |                 |                 | 想定しています                                          |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ex.                                                     |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・キャプチャグループの1個目をラベルの値にしたい場合     |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 　→ \\1                                                 |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・キャプチャグループの1個目 + 任意の値（.com）をラベル\ |              |              |                 |
      |                 |                 | の値にしたい場合                                        |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 　→ \\1.com                                             |              |              |                 |
      +-----------------+-----------------+---------------------------------------------------------+--------------+--------------+-----------------+
      | 備考                              | 自由記述欄です。                                        | ー           | 手動入力     | 最大長4000バイト|
      +-----------------------------------+---------------------------------------------------------+--------------+--------------+-----------------+

| ※1 ラベル付与における各ユースケースについて、必須項目は以下の通りです。

.. table:: ラベル付与におけるユースケースについて
 :widths: 9 1 2 3 1 1 2
 :align: left

 +-------------------------------------------------+-----------------------------------------------------------------------+----------------------------+
 | **ユースケース**                                | **検索条件**                                                          | **ラベル**                 |
 |                                                 +----------------+------------------+------------------+----------------+-------------+--------------+
 |                                                 | **キー**       | **値のデータ型** | **比較方法**     | **比較する値** | **キー**    | **値**       |
 +=================================================+================+==================+==================+================+=============+==============+
 | 検索条件にマッチした際に、ラベルを付与したい    | 〇             | 〇               | 〇               | 〇             | 〇          | 〇           |
 +-------------------------------------------------+----------------+------------------+------------------+----------------+-------------+--------------+
 | 検索条件にマッチした際に、マッチした値を\       | 〇             | 〇               | 〇               | 〇             | 〇          | ー           |
 | そのままラベルの値として使用したい              |                |                  |                  |                |             |              |
 +-------------------------------------------------+----------------+------------------+------------------+----------------+-------------+--------------+
 | 検索条件のキーがマッチした際に、ラベル\         | 〇             | ー               | ー               | ー             | 〇          | 〇,ー        |
 | を付与したい                                    |                |                  |                  |                |             |              |
 +-------------------------------------------------+----------------+------------------+------------------+----------------+-------------+--------------+
 | 検索条件の値がFalseの値（空文字、[]、{}、0、\   |  〇            | ー               | ==（一致）,      | ー             | 〇          | == → 〇,ー   |
 | False）でマッチした際に、ラベルを付与したい     |                |                  |                  |                |             |              |
 |                                                 |                |                  | ≠（不一致）のみ  |                |             | ≠ → 〇 のみ  |
 +-------------------------------------------------+----------------+------------------+------------------+----------------+-------------+--------------+
 | 検索条件に正規表現を使用したい                  | 〇             | その他 のみ      | RegExp,          | 〇             | 〇          | 〇,ー        |
 |                                                 |                |                  |                  |                |             |              |
 |                                                 |                |                  | RegExp\          |                |             |              |
 |                                                 |                |                  | (DOTALL),        |                |             |              |
 |                                                 |                |                  |                  |                |             |              |
 |                                                 |                |                  | RegExp\          |                |             |              |
 |                                                 |                |                  | (MULTILINE)\     |                |             |              |
 |                                                 |                |                  | のみ             |                |             |              |
 +-------------------------------------------------+----------------+------------------+------------------+----------------+-------------+--------------+
 | 全てのイベントにラベルを付与したい              | ー             | ー               | ー               | ー             | 〇          | 〇           |
 +-------------------------------------------------+----------------+------------------+------------------+----------------+-------------+--------------+

| 具体的な設定例に関しては、 :ref:`labeling_sample` を参照してください。

| ※2 値の各データ型の説明は以下の通りです。

.. list-table:: ラベル付与における値のデータ型について
   :widths: 1 2 3
   :header-rows: 1
   :align: left

   * - 値のデータ型
     - 比較方法
     - 比較する値
   * - 文字列
     - | RegExp、RegExp(DOTALL)、
       | RegExp(MULTILINE)以外可能
     - | ー
       | 例　sample
   * - 整数
     - | RegExp、RegExp(DOTALL)、
       | RegExp(MULTILINE)以外可能
     - | ー
       | 例　10
   * - 小数
     - | RegExp、RegExp(DOTALL)、
       | RegExp(MULTILINE)以外可能
     - | ー
       | 例　1.1
   * - 真偽値
     - ==（一致）, ≠不一致）のみ
     - true, falseのみ（大文字が含まれていても可能）
   * - オブジェクト
     - ==（一致）, ≠不一致）のみ
     - | {}で囲みます。
       | 例　{Key: Value}
   * - 配列
     - ==（一致）, ≠不一致）のみ
     - | []で囲みます。
       | 例　[aa, bb, cc]
   * - 空判定
     - ==（一致）, ≠不一致）のみ
     - | 空文字、[]、{}、0、Falseのみ
       | 例　""
   * - その他
     - | RegExp、RegExp(DOTALL)、
       | RegExp(MULTILINE)のみ
     - ー

| ※3 ラベル付与における正規表現に関しては、以下の通りです。

.. table:: ラベル付与における正規表現の種類について
 :widths: 1 3
 :align: left

 +-----------------------+------------------------------------------------------------------+
 | **比較方法**          | **説明**                                                         |
 +=======================+==================================================================+
 | RegExp                | オプションなしで正規表現を行います。                             |
 +-----------------------+------------------------------------------------------------------+
 | RegExp(DOTALL)        | 「.」を改行を含む全ての文字にマッチさせることができます。        |
 |                       |                                                                  |
 |                       | このオプションがなければ、改行を含まない全ての文字、になります。 |
 +-----------------------+------------------------------------------------------------------+
 | RegExp(MULTILINE)     | 「^」「$」が各行の先頭と末尾にマッチさせることができます。       |
 +-----------------------+------------------------------------------------------------------+

| 具体的な使用例に関しては、 :ref:`labeling_regexp_sample` を参照してください。



.. _deduplication:

重複排除
--------

重複排除について
^^^^^^^^^^^^^^^^^
| 重複排除機能は、同じ内容のイベントが重複して発生した場合に、重複するイベントを除外して処理負荷を軽減する機能です。
| イベント収集設定で重複排除を有効にすると、重複排除で指定したラベルキーの値が一致するイベントを重複とみなします。
| 例えば、「host」と「status」をキーに指定した場合、同じホストで同じ状態のイベントが複数回発生しても、最初の1件のみが処理対象となります。
| 
| エージェントを冗長化している環境では、複数のエージェントが同じイベントを送信することがあり、重複排除機能でそれらを1件にまとめることができます。
| 重複排除されたイベントは評価フローにも投入されないため、不要なアクション実行を防げます。

.. figure:: /images/ja/oase/oase/oase_deduplication_example.png
   :width: 800px
   :alt: 重複排除の例

   重複排除の例

| 重複排除のキーとなるラベルは複数指定でき、すべてのキーの値が一致した場合にのみ重複とみなされます。
| 重複排除機能を適切に設定することで、イベント数を削減し、システムリソースの消費を抑えながら、必要な対応は確実に実行できます。

重複排除画面
^^^^^^^^^^^^^

1. | :menuselection:`OASE --> 重複排除` 画面では、重複排除の設定をメンテナンス（閲覧/登録/更新/廃止）できます。

.. figure:: /images/ja/oase/oase/oase_deduplication_menu.png
   :width: 800px
   :alt: 重複排除画面

   重複排除画面

2. | 重複排除画面の入力項目は以下の通りです。


   .. table:: 重複排除画面 入力項目一覧
      :widths: 1 1 7 1 1 2
      :align: left

      +-----------------------------------+---------------------------------------------------------+--------------+--------------+-----------------+
      | **項目**                          | **説明**                                                | **入力必須** | **入力方法** | **制約事項**    |
      +===================================+=========================================================+==============+==============+=================+
      | 重複排除設定ID                    | 登録時に発番されるID                                    | ー           | 自動採番     | ー              |
      +-----------------------------------+---------------------------------------------------------+--------------+--------------+-----------------+
      | 重複排除設定名                    | 任意の重複排除設定名を入力します。                      | 〇           | 手動入力     | 最大長255バイト |
      +-----------------------------------+---------------------------------------------------------+--------------+--------------+-----------------+
      | 優先順位                          | 任意の優先順位を正の整数で入力してください。            | 〇           | 手動入力     | 数値            |
      |                                   | 数値が小さい順に重複排除の処理が実施されます。\         |              |              | 最小:1          |
      |                                   |                                                         |              |              | 最大:2147483647 |
      +-----------------------------------+---------------------------------------------------------+--------------+--------------+-----------------+
      | 冗長グループ（イベント収集先）    | 冗長するグループを選択します。                          | 〇           | リスト選択   | 最大長255バイト |
      |                                   | イベント収集で登録したイベント収集先設定名が表示され\   |              |              |                 |
      |                                   | ます。                                                  |              |              |                 |
      |                                   |                                                         |              |              |                 |
      |                                   | イベント収集先が同一の収集先を指定している際に\         |              |              |                 |
      |                                   | 冗長する情報を重複排除として指定する際に選択します。    |              |              |                 |
      |                                   |                                                         |              |              |                 |
      |                                   | 単一での重複排除設定を行う場合は単一のイベント収集先を\ |              |              |                 |
      |                                   | 選択します。                                            |              |              |                 |
      |                                   |                                                         |              |              |                 |
      +-----------------+-----------------+---------------------------------------------------------+--------------+--------------+-----------------+
      | 条件            | ラベル          | 重複排除の条件となるラベルを指定します。                | ー           | リスト選択   |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ラベル作成で作成したラベルキーを選択することができます。|              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | 複数選択することができ、条件：式で選択した内容で\       |              |              |                 |
      |                 |                 | 重複排除の処理が実施されます。                          |              |              |                 |
      |                 +-----------------+---------------------------------------------------------+--------------+--------------+-----------------+
      |                 | 式              | 式を選択します。                                        | ー           | リスト選択   |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・「を無視する」：                                      |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ラベルで選択した項目の値は不一致で、指定されていない\   |              |              |                 |
      |                 |                 | 項目が一致する条件で重複排除されるようになります。      |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ・「が一致する」：                                      |              |              |                 |
      |                 |                 |                                                         |              |              |                 |
      |                 |                 | ラベルで選択した項目が一致する値の場合に重複排除される\ |              |              |                 |
      |                 |                 | ようになります。                                        |              |              |                 |
      +-----------------+-----------------+---------------------------------------------------------+--------------+--------------+-----------------+
      | 備考                              | 自由記述欄です。                                        | ー           | 手動入力     | 最大長4000バイト|
      +-----------------------------------+---------------------------------------------------------+--------------+--------------+-----------------+

.. _filter:

フィルター詳細
--------------

フィルターについて
^^^^^^^^^^^^^^^^^^
| フィルターは、イベントをラベル条件で絞り込む機能です。
| :menuselection:`OASE --> フィルター` 画面では、複数のラベル条件を定義し、すべての条件に一致するイベントを抽出します。
| 
| フィルターで絞り込まれたイベントは、ルール評価の対象となります。
| 1つのフィルターは複数のルールで再利用できます。

.. _filter_search_method:

検索方法
^^^^^^^^^
| フィルターの検索方法は、ユニーク、キューイング、グルーピングの3種類があります。

ユニーク
********

| フィルター条件に一致する一意のイベントの抽出を行います。
| 複数イベントがヒットした場合、ヒットしたすべてのイベントは未知のイベントとして処理されます。

.. figure:: /images/ja/oase/oase/filter_unique.png

   検索方法（ユニーク）

キューイング
************

| フィルター条件に一致するイベントを保持し、TTL時間内に収集された複数のイベントをまとめて評価します。

.. figure:: /images/ja/oase/oase/filter_queing.png

   検索方法（キューイング）

グルーピング
************

| 対象のラベルの値がすべて一致するイベントを１グループとしてグルーピングします。
| 複数のイベントが同じグループにグルーピングされた場合、先頭のイベントを使用し、その他のイベントは無視されます。
| イベントフロー画面には、先頭イベントのみ表示されます。

.. figure:: /images/ja/oase/oase/filter_grouping.png

   検索方法（グルーピング）

.. figure:: /images/ja/oase/oase/filter_grouping_eventflow.png
   :width: 800px

   イベントフロー画面（グルーピングの表示）


| グルーピングのフィルターでは指定したラベルの値とTTLでグループ化され、グループ毎に１回だけアクションが実行されます。

| グルーピングのイメージは以下です。

.. figure:: /images/ja/oase/oase/filter_grouping_image.png
   :width: 900px

   グルーピングイメージ

フィルター画面
^^^^^^^^^^^^^^

1. | :menuselection:`OASE --> フィルター` 画面では、フィルターをメンテナンス（閲覧/登録/更新/廃止）できます。

.. figure:: /images/ja/oase/oase/filter_create_menu_v2-4.png
   :width: 800px
   :alt: フィルター画面

   フィルター画面

2. | フィルター画面の入力項目は以下の通りです。

.. list-table::
   :widths: 50 100 35 30 30
   :header-rows: 1
   :align: left

   * - 項目
     - 説明
     - 入力必須
     - 入力方法
     - 制約事項
   * - 有効
     - | フィルターの有効/無効を選択します。
       | True：有効
       | False：無効
     - 〇
     - リスト選択
     - ー
   * - フィルター名
     - 任意のフィルター名を入力します。
     - 〇
     - 手動入力
     - 最大長255バイト
   * - フィルター条件
     - フィルター条件を設定するウィンドウを開きます。
     - 〇
     - ー
     - ー
   * - 検索方法
     - | ラベルの検索方法を選択します。
       | ・ユニーク：条件に一致する一意のイベントを抽出します。複数イベントが同時にヒットした場合、ヒットしたイベントはすべて評価対象外（未知イベント）となります。
       | ・キューイング：条件に一致するイベントを保持し、TTL時間内に収集された複数のイベントをまとめて管理します。複数イベントがヒットした場合、先頭のイベントをルール評価の対象として使用します。
       | ・グルーピング：対象のラベルの値がすべて一致するイベントを１グループとしてグルーピングします。複数イベントがグルーピングされた場合、先頭のイベントを使用し、その他のイベントは無視（集約）されます。
     - 〇
     - 手動入力
     - ー
   * - ラベル（グルーピング対象）
     - | グルーピング対象のラベルを選択します。
       | ラベル作成で登録したラベルキーまたは「_exastro_host」が選択できます。
     - ○（グルーピングの場合）
     - リスト選択
     - ー
   * - 条件（グルーピング対象）
     - | グルーピング対象の条件を選択します。
       | を対象とする：ラベル（グルーピング対象）で選択した項目の値がすべて一致する場合に同グループとしてグルーピングされます。
       | 以外を対象とする：ラベル（グルーピング対象）で選択した項目以外の値がすべて一致する場合に同グループとしてグルーピングされます。
     - ○（グルーピングの場合）
     - リスト選択
     - ー
   * - 備考
     - 自由記述欄。レコードの廃止・復活時にも記載可能。
     - ー
     - 手動入力
     - 最大長4000バイト

フィルターの条件については :guilabel:`フィルター条件` 欄をクリックすることで表示されるウインドウから設定できます。

.. figure:: /images/ja/oase/oase/filter_condition_v2-4.png
   :width: 600px
   :alt: フィルター条件設定

   フィルター条件設定

3. | フィルター条件の入力項目は以下の通りです。

.. list-table::
   :widths: 50 100 30 30 30
   :header-rows: 1
   :align: left

   * - 項目
     - 説明
     - 入力必須
     - 入力方法
     - 制約事項
   * - ラベルキー
     - | 下記キーとラベル作成で登録したラベルキーが選択できます。
       | ・_exastro_event_collection_settings_id
       | ・_exastro_fetched_time
       | ・_exastro_end_time
       | ・_exastro_type
       | ・_exastro_host
       | ・_exastro_agent_name
     - 〇
     - リスト選択
     - ー
   * - 条件
     - ==（一致）,≠（不一致）が選択できます。
     - 〇
     - リスト選択
     - ー
   * - 条件値
     - ラベルキーに設定する値を入力します。
     - 〇
     - 手動入力
     - 最大長4000バイト

.. tip::
   | 検索方法にグルーピングを選択した場合、フィルターの条件値に「*」（ワイルドカード）を使用でき、特定のラベルキーの値ごとにイベントをグループ化できます。
   | 例えば「host == * 」と設定すると、ホストごとに個別のグループが作成され、各グループの先頭イベントが評価対象となります。

.. _action:

アクション詳細
--------------

アクションについて
^^^^^^^^^^^^^^^^^^^
| アクションは、ルールマッチ時に実行される対応処理のことです。
| :menuselection:`OASE --> アクション` 画面では、Conductor、オペレーション、対象ホストなどを指定し、実行する作業内容を定義します。
| Conductorを通じてAnsible Playbookが実行され、サービス再起動やパラメータ変更などの実作業が対象サーバーに対して自動的に行われます。
| アクション実行時には、イベントのラベル値を参照でき、これによりイベントごとに動的に作業対象や内容を変更できます。
| 
| アクションの設定はルールごとに任意で、指定しない場合はアクション実行が行われず、結論イベント生成のみが実行されます。
| 
| １つのアクションは複数のルールで再利用できます。

アクション画面
^^^^^^^^^^^^^^^

1. | :menuselection:`OASE --> アクション` では、アクションをメンテナンス（閲覧/登録/更新/廃止）できます。

.. figure:: /images/ja/oase/oase/action_create_menu_v2-4.png
   :width: 800px
   :alt: アクション画面

   アクション画面

1. | アクション画面の入力項目は以下の通りです。

.. list-table::
   :widths: 50 60 30 30 30
   :header-rows: 1
   :align: left

   * - 項目
     - 説明
     - 入力必須
     - 入力方法
     - 制約事項
   * - アクション名
     - 任意のアクション名を入力します。
     - 〇
     - 手動入力
     - 最大長255バイト
   * - Conductor名称
     - | [元データ]
       | Conductor/Conductor一覧/Conductor名称
     - 〇
     - リスト選択
     - ー
   * - オペレーション名
     - | [元データ]
       | 基本コンソール/オペレーション一覧/オペレーション名
     - 〇
     - リスト選択
     - ー
   * - イベント連携（ホスト）
     - 元イベントのラベル"_exastro_host"をアクションの対象ホストとして指定するかどうかを選択します。
     - 〇
     - リスト選択
     - デフォルト値：False
   * - 指定（ホスト）
     - | アクションの対象ホストを選択します。
       | [元データ]
       | Ansible共通/機器一覧/ホスト名
     - ー
     - リスト選択
     - ー
   * - 利用パラメータシート
     - | アクションで利用するパラメータシートを選択します。
       | [元データ]
       | パラメータシート(入力用)/パラメータシート名(ja)
     - ー
     - リスト選択
     - ー
   * - 備考
     - 自由記述欄。レコードの廃止・復活時にも記載可能。
     - ー
     - 手動入力
     - 最大長4000バイト


.. tip::
   | オペレーションを指定しない場合、「ホスト」と「利用パラメータシート」を設定します。

.. _rule:

ルール詳細
----------

ルールについて
^^^^^^^^^^^^^^
| ルールは、フィルター結果に基づいて「どのアクションを実行するか」「どんな結論イベントを生成するか」を決定する設定です。
| ルール設定では、フィルターA、フィルターB、フィルター演算子を組み合わせて、ルールマッチの条件を定義します。
| フィルターAのみを指定した場合、そのフィルターに一致するイベントがルールマッチとなります。
| フィルターAとフィルターBを両方指定した場合、フィルター演算子（AND、XOR、->）で条件を組み合わせて評価します。
| 
| ルールマッチしたイベントは、設定されたアクションが実行され、結論ラベル設定に基づいて結論イベントが生成されます。
| アクション実行は任意で、必要に応じて組み合わせて設定できます。
|
| ルールには優先度を設定でき、複数のルールがマッチした場合、優先順位が高いものにマッチします。
| 
| ルールを適切に設計することで、イベントの状況に応じた柔軟な自動対応が実現できます。

ルール画面
^^^^^^^^^^^

1. | :menuselection:`OASE --> ルール` では、ルールをメンテナンス（閲覧/登録/更新/廃止）できます。

.. figure:: /images/ja/oase/oase/rule_create_menu.png
   :width: 800px
   :alt: ルール画面

   ルール画面

2. | ルール画面の入力項目は以下の通りです。

.. list-table::
   :widths: 50 100 30 30 40
   :header-rows: 1
   :align: left

   * - 項目
     - 説明
     - 入力必須
     - 入力方法
     - 制約事項
   * - 有効
     - | フィルターの有効/無効を選択します。
       | True：有効
       | False：無効
     - 〇
     - リスト選択
     - ー
   * - ルール名
     - 任意のルール名を入力します。
     - 〇
     - 手動入力
     - 最大長255バイト
   * - ルールラベル名
     - | どのルールから作成された結論イベントなのかを、恒久的に判別するため
       | "_exastro_rule_name"ラベルに設定する任意の名前を入力します。
     - 〇
     - 手動入力
     - | 最大長255バイト
       | ※後から変更することはできません。
   * - 優先順位
     - | 優先順位を正の整数で入力してください。
       | 数値が小さいものを優先します。
     - 〇
     - 手動入力
     - 最大長255バイト
   * - フィルターA
     - | [元データ]
       | OASE/ルール/フィルター/フィルターID
     - 〇
     - リスト選択
     - ー
   * - フィルター演算子
     - | フィルター演算子を選択します。
       | A and B：AとBの両方にマッチさせる場合
       | A xor B：AかBのどちらかにマッチさせる場合
       | A -> B：AのあとにBが発生しているときにマッチさせる場合
     - 〇
     - リスト選択
     - ー
   * - フィルターB
     - | [元データ]
       | OASE/ルール/フィルター/フィルターID
     - ー
     - リスト選択
     - ー
   * - 事前通知
     -
     - ー
     - ファイル選択
     - | 最大サイズ2Mバイト
       | ※1
   * - 作業前承認待ち
     - ※今後機能追加予定です。
     - ー
     - ー
     - ー
   * - 事前通知先
     - 通知先を選択します。
     - ー
     - リスト選択
     - ー
   * - アクション名
     - | [元データ]
       | OASE/アクション/アクション名
     - ー
     - リスト選択
     - ー
   * - 事後通知
     -
     - ー
     - ファイル選択
     - | 最大サイズ2Mバイト
       | ※1
   * - 作業後承認待ち
     - ※今後機能追加予定です。
     - ー
     - ー
     - ー
   * - 事後通知先
     - 通知先を選択します。
     - ー
     - リスト選択
     - ー
   * - アクション（元イベントのラベル継承）
     - ルールに利用した元イベントのラベルをアクションのパラメーターとして利用するかどうかを選択します。
     - ー
     - リスト選択
     - デフォルト値：True
   * - 結論イベント（元イベントのラベル継承）
     - ルールに利用した元イベントのラベルを結論イベント継承するかどうかを選択します。
     - ー
     - リスト選択
     - デフォルト値：False
   * - 結論ラベル設定
     - 結論イベント用のラベル付与を設定するウィンドウを開きます。
     - 〇
     - リスト選択
     - ー
   * - TTL
     - | TTL（Time To Live）とは、エージェントが取得したイベントが、ルールの評価対象として扱われる期間（秒）のことです。
     - 〇
     - 手動入力
     - | 最小値10（秒）
       | 最大値2147483647（秒）
       | デフォルトの値：3600（秒）
   * - 備考
     - 自由記述欄。レコードの廃止・復活時にも記載可能。
     - ー
     - 手動入力
     - 最大長4000バイト

| ※1 事前・事後通知に使用できるテンプレートに関しては、 :ref:`variables_available_templates` を参照してください。

結論ラベルについては :guilabel:`結論ラベル設定` 欄をクリックすることで表示されるウインドウから設定できます。

.. figure:: /images/ja/oase/oase/conclusion_label_settings_v2-4.png
   :width: 600px
   :alt: 結論ラベル設定

   結論ラベル設定


1. | 結論ラベルの入力項目は以下の通りです。

.. list-table::
   :widths: 50 100 30 30 30
   :header-rows: 1
   :align: left

   * - 項目
     - 説明
     - 入力必須
     - 入力方法
     - 制約事項
   * - 結論ラベルキー
     - | 下記キーとラベル作成で登録したラベルキーが選択できます。
       | ・_exastro_host
     - 〇
     - リスト選択
     - ー
   * - 結論ラベル値
     - 結論ラベルキーに設定する値を入力します。
     - 〇
     - 手動入力
     - 最大長4000バイト


.. _evaluation_results:

評価結果
--------

1. | :menuselection:`OASE --> 評価結果` では、評価結果を閲覧できます。

.. figure:: /images/ja/oase/oase/evaluation_results_menu.png
   :width: 800px
   :alt: 評価結果画面

   評価結果画面

2. | 評価結果画面の項目は以下の通りです。
   | :guilabel:`詳細` ボタンで :menuselection:`Conductor --> 作業状態確認` に遷移し、実行状態の詳細を閲覧することができます。

.. list-table::
   :widths: 50 100
   :header-rows: 1
   :align: left

   * - 項目
     - 説明
   * - アクション履歴ID
     - ラベルキーを半角英数字と利用可能な記号(_-)で入力できます。
   * - ルールID
     - | [元データ]
       | OASE/ルール/ルールID
   * - ルール名
     - | [元データ]
       | OASE/ルール/ルール名
   * - ステータス
     - | ステータスには以下の状態が存在します。
       | ・判定済み
       | ・実行中
       | ・承認待ち
       | ・承認済み
       | ・承認却下済み
       | ・完了
       | ・完了（異常）
       | ・完了確認待ち
       | ・完了確認済み
       | ・完了確認却下済み
   * - アクションID
     - | [元データ]
       | OASE/アクション/アクションID
   * - アクション名
     - | [元データ]
       | OASE/アクション/アクション名
   * - ConductorインスタンスID
     - | [元データ]
       | Conductor/Conductor作業履歴/ConductorインスタンスID
   * - Conductor名称
     - | [元データ]
       | Conductor/Conductor作業履歴/Conductor名称
   * - オペレーションID
     - | [元データ]
       | 基本コンソール/オペレーション一覧/オペレーションID
   * - オペレーション名
     - | [元データ]
       | 基本コンソール/オペレーション一覧/オペレーション名
   * - イベント連携
     - [元データ]ルール
   * - 指定ホストID
     - | [元データ]
       | Ansible共通/機器一覧/管理システム項番
   * - 指定ホスト名
     - | [元データ]
       | Ansible共通/機器一覧/ホスト名
   * - 利用パラメータシート名
     - | [元データ]
       | パラメータシート定義一覧/パラメータシート名(ja)
   * - 利用パラメータシート（rest）
     - | [元データ]
       | パラメータシート定義一覧/パラメータシート名(rest)
   * - 利用イベントID
     - アクションを実行するに至ったイベントのID一覧。
   * - アクション（元イベントのラベル継承）
     - [元データ]ルール
   * - イベント（元イベントのラベル継承）
     - [元データ]ルール
   * - アクションパラメータ
     - アクションへ連携するパラメータを表示します。
   * - 結論イベントラベル
     - 結論イベントで利用するラベルを表示します。
   * - 登録日時
     - YYYY/MM/DD HH:MM:SS
   * - 備考
     - 自由記述欄。レコードの廃止・復活時にも記載可能。


付録
=====

.. _labeling_sample:

ラベル付与での設定例
---------------------

| ラベル付与での設定例は以下の通りです。

.. figure:: /images/ja/oase/oase/labeling_sample.png
   :width: 800px
   :alt: ラベル付与での記入例（ラベル付与）

   ラベル付与での記入例（ラベル付与）

.. _labeling_regexp_sample:

ラベル付与での使用例（正規表現）
--------------------------------

| 正規表現を使用したラベル付与での使用例は以下の通りです。

.. table:: 正規表現のオプションの有無の例
 :widths: 2 2 3 1 1 2
 :align: left

 +---------------------+---------------------------------------------------------------------+-----------------------------+------------------------------------+
 |                     | **検索条件**                                                        | **ラベル**                  |                                    |
 +---------------------+-----------------------+---------------------------------------------+--------------+--------------+------------------------------------+
 | **メール本文**      | **比較方法**          | **比較する値**                              |  **キー**    | **値**       | **付与されるラベル（key: value）** |
 +=====================+=======================+=============================================+==============+==============+====================================+
 | 対象                | RegExp                | サーバ:(.*).com                             | Server       | ー           | Server: web01                      |
 |                     |                       |                                             |              |              |                                    |
 | サーバ:web01.com    |                       |                                             |              |              |                                    |
 +---------------------+-----------------------+---------------------------------------------+--------------+--------------+------------------------------------+
 | ・・・（文章）      | RegExp(DOTALL)        | サーバ:(\\w+).com\\r\\n(.*)が発生しました。 | Server       | \\2: \\1     | Server: 障害: web01                |
 |                     |                       |                                             |              |              |                                    |
 | 対象                |                       |                                             |              |              |                                    |
 |                     |                       |                                             |              |              |                                    |
 | サーバ:web01.com    |                       |                                             |              |              |                                    |
 |                     |                       |                                             |              |              |                                    |
 | ・・・（文章）      |                       |                                             |              |              |                                    |
 +---------------------+-----------------------+---------------------------------------------+--------------+--------------+------------------------------------+
 | サーバ:web01.com    | RegExp(MULTILINE)     | ^サーバ:(.*).com\\r$                        | Server       | \\1          | Server: web01                      |
 |                     |                       |                                             |              |              |                                    |
 | 障害が発生しました。|                       |                                             |              |              |                                    |
 +---------------------+-----------------------+---------------------------------------------+--------------+--------------+------------------------------------+


.. figure:: /images/ja/oase/oase/labeling_regexp.png
   :width: 800px
   :alt: 正規表現を使用する場合の設定

   正規表現を使用する場合の設定


エージェントから送信されてくるイベントデータの形式
---------------------------------------------------

| エージェントから送信されてくるイベントデータの形式は以下の通りです。

.. code-block:: none
   :name: メールサーバからの受信データサンプル
   :caption: メールサーバからの受信データサンプル
   :lineno-start: 1

   {
           "event": [{
               "message_id": "<20231004071711.06338770D0A0@ita-oase-mailserver.localdomain>",
               "envelope_from": "root@ita-oase-mailserver.localdomain",
               "envelope_to": "user1@localhost",
               "header_from": "<root@ita-oase-mailserver.localdomain>",
               "header_to": "user1@localhost",
               "mailaddr_from": "root <root@ita-oase-mailserver.localdomain>",
               "mailaddr_to": "user1@localhost",
               "date": "2023-10-04 16:17:10",
               "lastchange": 1696403830.0,
               "subject": "test mail",
               "body": "sample\r\n"
               "_exastro_event_collection_settings_id": "d0c9a70c-a1c0-4c7b-9e96-82e602ebc55e",
               "_exastro_fetched_time": 1696406510,
               "_exastro_end_time": 1696406810,
               "_exastro_type": "event"
               "_exastro_event_collection_settings_name": "agent01"
           }]
   }

.. _loop_care_notes:

イベント履歴や評価結果に大量のレコードが表示されている場合の確認事項
--------------------------------------------------------------------

| あるルールで設定した結論イベントが、先述のルールに到達するフィルターにマッチする設定になっていた場合
| 再びルールにマッチして結論イベントを生み出すという挙動を繰り返すため
| 無限ループ状態になり、イベント履歴や評価結果に大量のレコードが登録され続ける状態となります。
| 必要に応じて、フィルターやルールの無効化などを行い、設定を見直してみて下さい。


.. _event_history_search_method:

イベント履歴での検索方法
-------------------------

| 検索方法に関しては以下の通りです。

.. table:: イベント履歴画面 検索方法一覧
 :widths: 3 2 2 2
 :align: left

 +-----------------------------------+--------------------------------------------------------------+
 | **項目**                          | **検索**                                                     |
 |                                   +----------------+----------------------+----------------------+
 |                                   | **完全一致**   | **部分一致**         | **一致無し**         |
 +===================================+================+======================+======================+
 | オブジェクトID                    | 検索ヒットする | バリデーションエラー | バリデーションエラー |
 +-----------------------------------+----------------+----------------------+----------------------+
 | イベント収集設定ID                | 検索ヒットする | 検索ヒットする       | 表示なし             |
 +-----------------------------------+----------------+----------------------+----------------------+
 | イベント収集日時                  | 検索ヒットする | ※1                   | 表示なし             |
 +-----------------------------------+----------------+----------------------+----------------------+
 | イベント有効日時                  | 検索ヒットする | ※1                   | 表示なし             |
 +-----------------------------------+----------------+----------------------+----------------------+
 | イベント状態                      | 検索ヒットする | 検索ヒットする       | 表示なし             |
 +-----------------------------------+----------------+----------------------+----------------------+
 | イベント種別                      | 検索ヒットする | 検索ヒットする       | 表示なし             |
 +-----------------------------------+----------------+----------------------+----------------------+
 | ラベル                            | 検索ヒットする | 検索ヒットする       | 表示なし             |
 +-----------------------------------+----------------+----------------------+----------------------+
 | 評価ルール名                      | 検索ヒットする | 検索ヒットする       | 表示なし             |
 +-----------------------------------+----------------+----------------------+----------------------+
 | 利用イベント ※2                   | 検索ヒットする | バリデーションエラー | バリデーションエラー |
 +-----------------------------------+----------------+----------------------+----------------------+

| ※1 イベント収集日時とイベント有効日時の部分一致に関しては以下の通りです。

検索可能な部分一致例
  | YYYY/MM/DD
  | YYYY/MM/DD hh
  | YYYY/MM/DD hh:mm
  |

検索不可能（バリデーションエラー）部分一致例
  | 下記のように最終文字が途切れているもの or 最終文字がコロン
  | YYYY/MM/D
  | YYYY/MM/DD h
  | YYYY/MM/DD hh:
  | YYYY/MM/DD hh:mm:
  | 具体例：2024/09/01 12:2
  |


| ※2 利用イベントの検索方法については以下の通りです。

レコードの「利用イベント」の値を全文使用する
  | 複数個
  | ["ObjectId('xxxxxxxxxxxxxxxxxxxxxxxx')",... "ObjectId('yyyyyyyyyyyyyyyyyyyyyyyy')"]
  | 1個
  | ["ObjectId('xxxxxxxxxxxxxxxxxxxxxxxx')"]
  |

レコードの「利用イベント」の値の配列の中身を使用する
  | 複数個
  | "ObjectId('xxxxxxxxxxxxxxxxxxxxxxxx')",... "ObjectId('yyyyyyyyyyyyyyyyyyyyyyyy')"
  | 1個
  | "ObjectId('xxxxxxxxxxxxxxxxxxxxxxxx')"
  |

レコードの「利用イベント」の値のObjectIdの文字を付けたまま使用する
  | 複数個
  | ObjectId('xxxxxxxxxxxxxxxxxxxxxxxx'),... ObjectId('yyyyyyyyyyyyyyyyyyyyyyyy')
  | 1個
  | ObjectId('xxxxxxxxxxxxxxxxxxxxxxxx')
  |

レコードの「利用イベント」の値のObjectIdの中身の値を使用する
  | 複数個
  | xxxxxxxxxxxxxxxxxxxxxxxx,... yyyyyyyyyyyyyyyyyyyyyyyy
  | 1個
  | xxxxxxxxxxxxxxxxxxxxxxxx'



.. _variables_available_templates:

事前・事後通知のテンプレート
---------------------------------

| 事前・事後通知のテンプレートは下記の通りです。

.. code-block:: none
   :name: 事前通知のテンプレート
   :caption: 事前通知のテンプレート
   :lineno-start: 1

   [TITLE]
   事前通知

   [BODY]
   イベント
   {%- for event in events -%}
   {%- set i = loop.index %}
       イベントの元データ #{{ i }}
   {%- for  key, value in event._exastro_events.items() %}
         ・{{ key }}：{{ value }}
   {%- endfor -%}
   {%- endfor %}
       結論イベントのラベル     ： {{ action_log.conclusion_event_labels }}

   ルール情報
       マッチしたルールのID     ： {{ rule.rule_id }}
       マッチしたルール名       ： {{ rule.rule_name }}
       条件
         フィルターA
           フィルターID         ： {{ rule.filter_a }}
           フィルター名         ： {{ rule.filter_a_name }}
           フィルター条件       ： {{ rule.filter_a_condition_json }}
         フィルター演算子        : {{ rule.filter_operator }}
         フィルターB
           フィルターID         ： {{ rule.filter_b }}
           フィルター名         ： {{ rule.filter_b_name }}
           フィルター条件       ： {{ rule.filter_b_condition_json }}
       結論イベント
         元イベントのラベル継承
           アクション           ： {{ rule.action_label_inheritance_flag }}
           イベント             ： {{ rule.event_label_inheritance_flag }}
         結論ラベル設定         ： {{ rule.conclusion_label_settings }}
       TTL                      ： {{ rule.ttl }}
       備考                     ： {{ rule.note }}

   アクション情報
       アクションのID           ： {{ action.action_id }}
       アクション名             ： {{ action.action_name }}
       オペレーションのID       ： {{ action.operation_id }}
       オペレーション名         ： {{ action.operation_name }}
       実行するConductorのID    ： {{ action.conductor_class_id }}
       実行するConductor名      ： {{ action.conductor_name }}
       ホスト
         イベント連携           ： {{ action.event_collaboration }}
         指定                   ： {{ action.host_id }}
       利用パラメーターシート   ： {{ action.parameter_sheet_id }}
       備考                     ： {{ action.note }}


.. code-block:: none
   :name: 事後通知のテンプレート
   :caption: 事後通知のテンプレート
   :lineno-start: 1

   [TITLE]
   事後通知

   [BODY]
   イベント
   {%- for event in events -%}
   {%- set i = loop.index %}
     イベント #{{ i }}
       イベントのID           ： {{ event.labels._id }}
       イベント収集設定ID     ： {{ event.labels._exastro_event_collection_settings_id }}
       イベント収集設定名     ： {{ event.labels._exastro_event_collection_settings_name }}
       イベント取得時間       ： {{ event.labels._exastro_fetched_time }}
       イベントのラベル
   {%- for key, value in event.labels.items() %}
         ・{{ key }}：{{ value }}
   {%- endfor %}
       イベントの元データ
   {%- for  key, value in event._exastro_events.items() %}
         ・{{ key }}：{{ value }}
   {%- endfor -%}
   {%- endfor %}

   マッチした結果
     ステータス               ： {{ action_log.status }}
     登録日時                 ： {{ action_log.time_register }}
     実行したConductorのID    ： {{ action_log.conductor_instance_id }}
     実行したConductor名      ： {{ action_log.conductor_instance_name }}
     結論イベントのラベル     ： {{ action_log.conclusion_event_labels }}

   ルール情報
     マッチしたルールのID     ： {{ rule.rule_id }}
     マッチしたルール名       ： {{ rule.rule_name }}
     条件
       フィルターA
         フィルターID         ： {{ rule.filter_a }}
         フィルター名         ： {{ rule.filter_a_name }}
         フィルター条件       ： {{ rule.filter_a_condition_json }}
       フィルター演算子        : {{ rule.filter_operator }}
       フィルターB
         フィルターID         ： {{ rule.filter_b }}
         フィルター名         ： {{ rule.filter_b_name }}
         フィルター条件       ： {{ rule.filter_b_condition_json }}
     結論イベント
       元イベントのラベル継承
         アクション           ： {{ rule.action_label_inheritance_flag }}
         イベント             ： {{ rule.event_label_inheritance_flag }}
       結論ラベル設定         ： {{ rule.conclusion_label_settings }}
     TTL                      ： {{ rule.ttl }}
     備考                     ： {{ rule.note }}

   アクション情報
     アクションのID           ： {{ action.action_id }}
     アクション名             ： {{ action.action_name }}
     オペレーションのID       ： {{ action.operation_id }}
     オペレーション名         ： {{ action.operation_name }}
     実行するConductorのID    ： {{ action.conductor_class_id }}
     実行するConductor名      ： {{ action.conductor_name }}
     ホスト
       イベント連携           ： {{ action.event_collaboration }}
       指定                   ： {{ action.host_id }}
     利用パラメーターシート   ： {{ action.parameter_sheet_id }}
     備考                     ： {{ action.note }}

   Conductor情報
     ステータス               ： {{ conductor.status }}
     オペレーションID         ： {{ conductor.operation_id }}
     オペレーション名         ： {{ conductor.operation_name }}
     登録日時                 ： {{ conductor.time_register }}
     予約日時                 ： {{ conductor.time_book }}
     開始日時                 ： {{ conductor.time_start }}
     終了日時                 ： {{ conductor.time_end }}
     緊急停止フラグ           ： {{ conductor.abort_execute_flag }}
     備考                     ： {{ conductor.note }}


変数を使用した際の結果パターン
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

| 結果にパターンのある変数に関しては以下の通りです。

- | action_log.status
  | 判定済み         → Rule matched
  | 実行中           → Executing
  | 完了             → Completed
  | 完了（異常）     → Completed (abnormal)
  | 完了確認待ち     → Waiting for completion confirmation
  | 完了確認済み     → Completion confirmed
  | 完了確認却下済み → Completion confirmation rejected
  |

- | rule.action_label_inheritance_flag
  | パラメータとして利用する   → Used as a parameter
  | パラメータとして利用しない → Not use as a parameter
  |

- | rule.event_label_inheritance_flag
  | 結論イベントに継承する   → Inheriting Conclusion Events
  | 結論イベントに継承しない → Not Inheriting Conclusion Events
  |

- | conductor.status
  | 未実行       → Unexecuted
  | 未実行(予約) → Unexecuted (scheduled)
  | 実行中       → Executing
  | 実行中(遅延) → Executing (delayed)
  | 一時停止     → Paused
  | 正常終了     → Completed
  | 異常終了     → Abend
  | 警告終了     → Ended with warning
  | 緊急停止     → Emergency stop
  | 予約取消     → Cancelled reservation
  | 想定外エラー → Unexpected error
  |

- | conductor.note
  | 発令済み → Issued
  | 未発令   → not issued
